petlsql/sql/Parser.py
#-------------------------------------------------------------------------
#Parser.py -- ATG file parser
#Compiler Generator Coco/R,
#Copyright (c) 1990, 2004 Hanspeter Moessenboeck, University of Linz
#extended by M. Loeberbauer & A. Woess, Univ. of Linz
#ported from Java to Python by Ronald Longo
#
#This program is free software; you can redistribute it and/or modify it
#under the terms of the GNU General Public License as published by the
#Free Software Foundation; either version 2, or (at your option) any
#later version.
#
#This program is distributed in the hope that it will be useful, but
#WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
#or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
#for more details.
#
#You should have received a copy of the GNU General Public License along
#with this program; if not, write to the Free Software Foundation, Inc.,
#59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
#As an exception, it is allowed to write an extension of Coco/R that is
#used as a plugin in non-free software.
#
#If not otherwise stated, any source code generated by Coco/R (other than
#Coco/R itself) does not fall under the GNU General Public License.
#-------------------------------------------------------------------------*/


from . import ast
from .Scanner import *

import logging


class ErrorRec( object ):
    def __init__( self, l, c, s ):
        self.line   = l
        self.col    = c
        self.num    = 0
        self.str    = s


class Errors( object ):
    errMsgFormat = "file %(file)s : (%(line)d, %(col)d) %(text)s\n"
    #minErrDist   = 2
    #errDist      = minErrDist

    def __init__(self,fn):
        #eof          = False
        self.count    = 0         # number of errors detected
        self.fileName = fn

    def storeError(self, lvl, line, col, s ):
        print("%s[%d, %d]: %s" % (self.fileName, line, col, s))

    def SynErr(self, errNum, errPos=None ):
       line,col = errPos if errPos else self.getParsingPos( )
       self.storeError(logging.ERROR, line, col, self.errorMessages[ errNum ] )
       self.count += 1

    def SemErr(self, errMsg, errPos=None ):
       line,col = errPos if errPos else self.getParsingPos( )
       self.storeError(logging.ERROR, line, col, errMsg )
       self.count += 1

    def Warn(self, errMsg, errPos=None ):
       line,col = errPos if errPos else self.getParsingPos( )
       self.storeError(logging.WARNING, line, col, errMsg )


class Parser( object ):
   _EOF = 0
   _ident = 1
   _fixident = 2
   _paramId = 3
   _integer = 4
   _float = 5
   _string = 6
   maxT = 104

   T          = True
   x          = False
   minErrDist = 2

   
   def __init__( self, filename, errors_class=Errors):
      self.scanner     = None
      self.token       = None           # last recognized token
      self.la          = None           # lookahead token
      self.genScanner  = False
      self.tokenString = ''             # used in declarations of literal tokens
      self.noString    = '-none-'       # used in declarations of literal tokens
      self.errDist     = Parser.minErrDist
      self.macroMode = False
      errs = self.errors = errors_class(filename)
      errs.getParsingPos = self.getParsingPos
      errs.errorMessages = Parser.errorMessages

   def getParsingPos( self ):
      return self.la.line, self.la.col

   def SynErr( self, errNum ):
      if self.errDist >= Parser.minErrDist:
         self.errors.SynErr( errNum )

      self.errDist = 0

   def SemErr( self, msg ):
      if self.errDist >= Parser.minErrDist:
         self.errors.SemErr( msg )

      self.errDist = 0

   def Warning( self, msg ):
      if self.errDist >= Parser.minErrDist:
         self.errors.Warn( msg )

      self.errDist = 0

   def Successful( self ):
      return self.errors.count == 0;

   def LexString( self ):
      return self.token.val

   def LookAheadString( self ):
      return self.la.val

   def Get( self ):
      while True:
         self.token = self.la
         self.la = self.scanner.Scan( )
         if self.la.kind <= Parser.maxT:
            self.errDist += 1
            break
         
         self.la = self.token

   def Expect( self, n ):
      if self.la.kind == n:
         self.Get( )
      else:
         self.SynErr( n )

   def StartOf( self, s ):
      return self.set[s][self.la.kind]

   def ExpectWeak( self, n, follow ):
      if self.la.kind == n:
         self.Get( )
      else:
         self.SynErr( n )
         while not self.StartOf(follow):
            self.Get( )

   def WeakSeparator( self, n, syFol, repFol ):
      s = [ False for i in xrange( Parser.maxT+1 ) ]
      if self.la.kind == n:
         self.Get( )
         return True
      elif self.StartOf(repFol):
         return False
      else:
         for i in xrange( Parser.maxT ):
            s[i] = self.set[syFol][i] or self.set[repFol][i] or self.set[0][i]
         self.SynErr( n )
         while not s[self.la.kind]:
            self.Get( )
         return self.StartOf( syFol )

   def getCasesensitiveTokenValue(self,token):
        p = token.pos
        return str(self.scanner.buffer.getSlice(p, p+len(token.val)))

   def sql( self ):
      val, withc, names = None, None, None 
      self.context = None 
      while self.la.kind == 7:
         self.Get( )
         name = self.Name()
         if (self.la.kind == 9):
            names = self.columnNames()
         self.Expect(8)
         self.Expect(9)
         val = self.sqlselect()
         if names:
           val.set_header(names)
         if withc is None:
             withc = ast.WithContext()
         withc.addView(name, val)
         
         self.Expect(10)

      val = self.sqlselect()
      val.withcontext = withc
      self.result = val
      
      self.Expect(0)

   def Name( self ):
      id = self.Ident()
      while self.la.kind == 103:
         self.Get( )
         id1 = self.Ident()
         id = '%s.%s' % (id,id1) 

      id = ast.Identifier(id) 
      return id

   def columnNames( self ):
      names = [] 
      self.Expect(9)
      id = self.Ident()
      names.append(id) 
      while self.la.kind == 11:
         self.Get( )
         id = self.Ident()
         names.append(id) 

      self.Expect(10)
      return names

   def sqlselect( self ):
      self.Expect(12)
      oldcontext = self.context
      val = self.context = ast.SelectAst()
      val.parent = oldcontext
      
      if (self.la.kind == 19 or self.la.kind == 20):
         d = self.setQuantifier()
         val.distinct = d 
      if self.la.kind == 13:
         self.Get( )
         val.allColumns() 
      elif self.StartOf(1):
         self.selectList()
      else:
         self.SynErr(105)
      self.Expect(14)
      tbl = self.tableRefList()
      val.source = tbl 
      if (self.la.kind == 15):
         self.Get( )
         cond = self.searchCondition()
         val.set_where(cond) 
      if (self.la.kind == 16):
         self.Get( )
         self.Expect(17)
         self.groupList()
      if (self.la.kind == 18):
         self.Get( )
         self.Expect(17)
         self.orderList()
      self.context = oldcontext 
      return val

   def Ident( self ):
      id = None 
      if self.la.kind == 1:
         self.Get( )
         id = self.getCasesensitiveTokenValue(self.token)     
      elif self.la.kind == 2:
         self.Get( )
         id = self.getCasesensitiveTokenValue(self.token)[1:] 
      else:
         self.SynErr(106)
      return id

   def setQuantifier( self ):
      if self.la.kind == 19:
         self.Get( )
         distinct = True 
      elif self.la.kind == 20:
         self.Get( )
         distinct = False 
      else:
         self.SynErr(107)
      return distinct

   def selectList( self ):
      self.selectItem()
      while self.la.kind == 11:
         self.Get( )
         self.selectItem()


   def tableRefList( self ):
      joinType = ast.Join.INNER 
      val = self.tableReference()
      while self.StartOf(2):
         if self.StartOf(3):
            if (self.StartOf(4)):
               if self.la.kind == 28:
                  self.Get( )
               else:
                  if self.la.kind == 29:
                     self.Get( )
                     joinType = ast.Join.LEFT 
                  elif self.la.kind == 30:
                     self.Get( )
                     joinType = ast.Join.RIGHT 
                  elif self.la.kind == 31:
                     self.Get( )
                     if (self.la.kind == 32):
                        self.Get( )
                     joinType = ast.Join.FULL 
                  else:
                     self.SynErr(108)
            self.Get( )
            t = self.tableReference()
            join = self.joinSpecification()
            val = ast.JoinCursor(val,t,joinType, join) 
         else:
            self.Get( )
            t = self.tableReference()
            val = ast.JoinCursor(val, t, ast.Join.UNION) 

      return val

   def searchCondition( self ):
      vals = [] 
      val = self.boolTerm()
      while self.la.kind == 36:
         self.Get( )
         v = self.boolTerm()
         if not vals: vals.append(val)
         vals.append(v)
         

      if vals: val = ast.ConditionExpr('or', vals) 
      return val

   def groupList( self ):
      vars = self.nameList()
      self.context.set_group_by(vars) 

   def orderList( self ):
      desc = False 
      vars = self.nameList()
      if (self.la.kind == 62 or self.la.kind == 63):
         if self.la.kind == 62:
            self.Get( )
         else:
            self.Get( )
            desc = True 
      self.context.set_order_by(vars, desc) 

   def selectItem( self ):
      id,val = None,None 
      if self.StartOf(5):
         val = self.valueLitteral()
      elif self.StartOf(6):
         val = self.aggregateFunction()
      else:
         self.SynErr(109)
      if (self.la.kind == 8):
         self.Get( )
         if self.la.kind == 1 or self.la.kind == 2:
            id = self.Ident()
         elif self.la.kind == 6:
            id = self.String()
         else:
            self.SynErr(110)
      self.context.addColumn(id, val) 

   def valueLitteral( self ):
      val = None 
      if self.la.kind == 1 or self.la.kind == 2:
         val = self.Name()
         if (self.la.kind == 9):
            self.Get( )
            args = self.procedureArgs()
            self.Expect(10)
            val = ast.Function(val, args) 
      elif self.StartOf(7):
         sign = 1 
         if (self.la.kind == 78 or self.la.kind == 79):
            if self.la.kind == 78:
               self.Get( )
            else:
               self.Get( )
               sign = -1 
         if self.la.kind == 4:
            val = self.Int()
         elif self.la.kind == 5:
            self.Get( )
            val = float(self.token.val) 
         else:
            self.SynErr(111)
         val = sign * val 
      elif self.la.kind == 6:
         val = self.String()
      elif self.la.kind == 47 or self.la.kind == 48:
         val = self.BoolLiteral()
      elif self.StartOf(8):
         val = self.standartFunction()
      elif self.la.kind == 80:
         self.Get( )
         val = self.caseExpr()
         self.Expect(81)
      elif self.la.kind == 9:
         self.Get( )
         if self.la.kind == 12:
            val = self.scalarSubquery()
         elif self.StartOf(5):
            val = self.valueExpr()
            val = ast.BracesExpr(val) 
         else:
            self.SynErr(112)
         self.Expect(10)
      elif self.la.kind == 3:
         val = self.SQLParameter()
      else:
         self.SynErr(113)
      return val

   def aggregateFunction( self ):
      d = False; f = ast.Aggregate.COUNT 
      if self.la.kind == 21:
         self.Get( )
         self.Expect(9)
         if self.la.kind == 13:
            self.Get( )
            val = None 
         elif self.StartOf(9):
            if (self.la.kind == 19 or self.la.kind == 20):
               d = self.setQuantifier()
            val = self.valueLitteral()
         else:
            self.SynErr(114)
         self.Expect(10)
      elif self.StartOf(10):
         if self.la.kind == 22:
            self.Get( )
            f = ast.Aggregate.AVG 
         elif self.la.kind == 23:
            self.Get( )
            f = ast.Aggregate.MAX 
         elif self.la.kind == 24:
            self.Get( )
            f = ast.Aggregate.MIN 
         else:
            self.Get( )
            f = ast.Aggregate.SUM 
         self.Expect(9)
         if (self.la.kind == 19 or self.la.kind == 20):
            d = self.setQuantifier()
         val = self.valueLitteral()
         self.Expect(10)
      elif self.la.kind == 26:
         self.Get( )
         f = ast.Aggregate.LIST 
         self.Expect(9)
         if (self.la.kind == 19 or self.la.kind == 20):
            d = self.setQuantifier()
         val = self.valueList()
         self.Expect(10)
      else:
         self.SynErr(115)
      val = ast.AggregateFunc(f, d, val) 
      if (self.la.kind == 27):
         cond = self.filterClause()
         val.selector = cond 
      return val

   def String( self ):
      self.Expect(6)
      val = self.getCasesensitiveTokenValue(self.token)[1:-1] 
      return val

   def valueList( self ):
      val = self.valueLitteral()
      while self.la.kind == 11:
         self.Get( )
         v = self.valueLitteral()
         if not isinstance(val, list):
             val = [val]
         val.append(v)
         

      return val

   def filterClause( self ):
      self.Expect(27)
      self.Expect(9)
      self.Expect(15)
      val = self.searchCondition()
      self.Expect(10)
      return val

   def tableReference( self ):
      id, tblname = '', '' 
      if self.la.kind == 1 or self.la.kind == 2:
         tblname = self.Name()
      elif self.la.kind == 6:
         tblname = self.String()
      else:
         self.SynErr(116)
      if (self.la.kind == 8):
         self.Get( )
         id = self.Ident()
      tbl = ast.Table(tblname, id) 
      return tbl

   def joinSpecification( self ):
      val =None 
      if self.la.kind == 34:
         self.Get( )
         cond = self.searchCondition()
         val = ast.JoinCondition(cond) 
      elif self.la.kind == 35:
         self.Get( )
         self.Expect(9)
         columns = self.NameList()
         self.Expect(10)
         val = ast.JoinUsing(columns) 
      else:
         self.SynErr(117)
      return val

   def NameList( self ):
      id = self.Name()
      val = [id] 
      while self.la.kind == 11:
         self.Get( )
         id = self.Name()
         val.append(id) 

      return val

   def boolTerm( self ):
      vals = [] 
      val = self.boolFactor()
      while self.la.kind == 37:
         self.Get( )
         v = self.boolFactor()
         if not vals: vals.append(val)
         vals.append(v)
         

      if vals: val = ast.ConditionExpr('and',vals) 
      return val

   def boolFactor( self ):
      neg = False 
      if (self.la.kind == 38):
         self.Get( )
         neg = True 
      val = self.primaryCondition()
      if neg: val = ast.Negation(val) 
      return val

   def primaryCondition( self ):
      val = self.valueLitteral()
      if (self.StartOf(11)):
         val = self.compareOperand(val)
      return val

   def compareOperand( self, arg ):
      is_true = True 
      if self.StartOf(12):
         if (self.la.kind == 38):
            self.Get( )
            is_true = False 
         if self.la.kind == 39:
            self.Get( )
            val = self.betweenExpr(arg, is_true)
         elif self.la.kind == 40:
            self.Get( )
            val = self.likeExpr(arg,False, is_true)
         elif self.la.kind == 41:
            self.Get( )
            self.Expect(42)
            val = self.likeExpr(arg,True, is_true)
         elif self.la.kind == 43:
            self.Get( )
            self.Expect(9)
            val = self.inExpr(arg, is_true)
            self.Expect(10)
         elif self.la.kind == 44:
            self.Get( )
            val = self.valueLitteral()
            val = ast.ContainingExpr(arg,val, is_true) 
         elif self.la.kind == 45:
            self.Get( )
            self.Expect(7)
            val = self.valueLitteral()
            val = ast.StartingExpr(arg, val, is_true) 
         else:
            self.SynErr(118)
      elif self.StartOf(13):
         val = self.compareExpr(arg)
      elif self.la.kind == 46:
         self.Get( )
         if (self.la.kind == 38):
            self.Get( )
            is_true = False 
         if self.la.kind == 19:
            self.Get( )
            self.Expect(14)
            val = self.valueLitteral()
            val = ast.DistinctFrom(is_true, arg, val) 
         elif self.StartOf(14):
            val = self.truthValue(is_true, arg)
         else:
            self.SynErr(119)
      else:
         self.SynErr(120)
      return val

   def betweenExpr( self, arg, is_true ):
      symmetric = False 
      if (self.la.kind == 51 or self.la.kind == 52):
         if self.la.kind == 51:
            self.Get( )
         else:
            self.Get( )
            symmetric = True 
      v1 = self.valueLitteral()
      self.Expect(37)
      v2 = self.valueLitteral()
      val = ast.BetweenExpr(symmetric, is_true, [arg, v1, v2]) 
      return val

   def likeExpr( self, arg,rex, is_true ):
      esc = None 
      pat = self.String()
      if (self.la.kind == 53):
         self.Get( )
         val = self.String()
         esc = val 
      val = ast.LikeExpr(arg, pat, rex, is_true, esc) 
      return val

   def inExpr( self, arg, is_true ):
      if self.StartOf(5):
         val = self.valueLitteral()
         vals = [val] 
         while self.la.kind == 11:
            self.Get( )
            val = self.valueLitteral()
            vals.append(val) 

         val = ast.InExpr(arg, is_true, vals) 
      elif self.la.kind == 12:
         self.selectColumnList()
      else:
         self.SynErr(121)
      return val

   def compareExpr( self, arg ):
      op = '==' 
      if self.la.kind == 54:
         self.Get( )
      elif self.StartOf(15):
         if self.la.kind == 55:
            self.Get( )
         elif self.la.kind == 56:
            self.Get( )
         elif self.la.kind == 57:
            self.Get( )
         else:
            self.Get( )
         op = self.token.val 
      elif self.la.kind == 59:
         self.Get( )
         op = '!=' 
      else:
         self.SynErr(122)
      if self.StartOf(5):
         v = self.valueLitteral()
         val = ast.CompareExpr(op, arg,v) 
      elif self.la.kind == 60 or self.la.kind == 61:
         if self.la.kind == 60:
            self.Get( )
         else:
            self.Get( )
         self.Expect(9)
         val = self.sqlselect()
         self.Expect(10)
      else:
         self.SynErr(123)
      return val
